--- a/index.html
+++ b/index.html
@@ -1,42 +1,68 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Joystick A-Frame</title>
+    <title>VR + Mobile Controls</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.9.0/nipplejs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden; touch-action: none;">
-    <!-- Joystick containers -->
-    <div id="joystick-left"
-         style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; pointer-events: auto;"></div>
+    <div id="joystick-left" style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
+    <div id="joystick-right" style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
 
-    <div id="joystick-right"
-         style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; pointer-events: auto;"></div>
-
-    <!-- A-Frame scene -->
-    <a-scene>
+    <a-scene vr-mode-ui="enabled: true" renderer="antialias: true">
+      <!-- Rig -->
       <a-entity id="cameraRig" position="0 1.6 0">
-        <a-camera wasd-controls-enabled="false"></a-camera>
+        <a-camera id="playerCam" wasd-controls="enabled: false" look-controls="enabled: true"></a-camera>
+
+        <!-- Controladores de VR dentro do rig -->
+        <a-entity id="leftHand" hand-controls="hand: left" oculus-touch-controls="hand: left"></a-entity>
+        <a-entity id="rightHand" hand-controls="hand: right" oculus-touch-controls="hand: right"></a-entity>
       </a-entity>
-      <a-box position="0 0.5 -5" color="red"></a-box>
+
+      <!-- Cena -->
+      <a-box position="0 0.5 -3" color="tomato"></a-box>
       <a-plane rotation="-90 0 0" width="30" height="30" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 
-    <!-- Joystick logic -->
     <script>
       window.addEventListener('DOMContentLoaded', () => {
         const cameraRig = document.getElementById('cameraRig');
-        const camera = cameraRig.querySelector('a-camera');
+        const joystickLeft = document.getElementById('joystick-left');
+        const joystickRight = document.getElementById('joystick-right');
+        const playerCam = document.getElementById('playerCam');
 
         let moveX = 0, moveY = 0, rotY = 0;
+        let isVR = false;
 
-        // Joystick esquerdo – movimento
+        function isTouchDevice() {
+          return 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+        }
+
+        function checkMode() {
+          isVR = AFRAME.scenes[0].is('vr-mode');
+          if (isVR) {
+            joystickLeft.style.display = 'none';
+            joystickRight.style.display = 'none';
+          } else if (isTouchDevice()) {
+            joystickLeft.style.display = 'block';
+            joystickRight.style.display = 'block';
+          } else {
+            joystickLeft.style.display = 'none';
+            joystickRight.style.display = 'none';
+          }
+        }
+
+        AFRAME.scenes[0].addEventListener('enter-vr', checkMode);
+        AFRAME.scenes[0].addEventListener('exit-vr', checkMode);
+
+        // Joystick Touchscreen (Mobile)
         nipplejs.create({
-          zone: document.getElementById('joystick-left'),
+          zone: joystickLeft,
           mode: 'static',
           position: { left: '50%', top: '50%' },
           color: 'blue'
@@ -50,44 +76,60 @@
           moveY = 0;
         });
 
-        // Joystick direito – rotação
         nipplejs.create({
-          zone: document.getElementById('joystick-right'),
+          zone: joystickRight,
           mode: 'static',
           position: { left: '50%', top: '50%' },
           color: 'red'
         }).on('move', (evt, data) => {
-          const angle = data.angle.degree;
-          const distance = data.distance;
-
-          if (angle > 45 && angle < 135) {
-            rotY = distance * 0.2;
-          } else if (angle > 225 && angle < 315) {
-            rotY = -distance * 0.2;
-          } else {
-            rotY = 0;
-          }
+          rotY = data.vector.x * 5;
         }).on('end', () => {
           rotY = 0;
         });
 
-        // Componente A-Frame que aplica os movimentos
-        AFRAME.registerComponent('dual-joystick', {
+        // Componente que move o player
+        AFRAME.registerComponent('movement-handler', {
+          init: function () {
+            const leftHand = document.getElementById('leftHand');
+            const rightHand = document.getElementById('rightHand');
+
+            // Thumbstick – Movimento
+            leftHand.addEventListener('thumbstickmoved', (evt) => {
+              moveX = evt.detail.x * 0.05;
+              moveY = -evt.detail.y * 0.05;
+            });
+            leftHand.addEventListener('thumbsticktouchend', () => {
+              moveX = 0;
+              moveY = 0;
+            });
+
+            // Thumbstick – Rotação
+            rightHand.addEventListener('thumbstickmoved', (evt) => {
+              rotY = evt.detail.x * 3;
+            });
+            rightHand.addEventListener('thumbsticktouchend', () => {
+              rotY = 0;
+            });
+          },
+
           tick: function () {
             const pos = cameraRig.getAttribute('position');
-            const rot = camera.getAttribute('rotation');
+            const rot = cameraRig.getAttribute('rotation');
             const angleRad = THREE.MathUtils.degToRad(rot.y);
 
+            // Mover com base na direção da câmera
             pos.x += Math.sin(angleRad) * moveY + Math.cos(angleRad) * moveX;
             pos.z += Math.cos(angleRad) * moveY - Math.sin(angleRad) * moveX;
             cameraRig.setAttribute('position', pos);
 
+            // Rotação
             rot.y += rotY * 0.05;
-            camera.setAttribute('rotation', rot);
+            cameraRig.setAttribute('rotation', rot);
           }
         });
 
-        cameraRig.setAttribute('dual-joystick', '');
+        cameraRig.setAttribute('movement-handler', '');
+        checkMode();
       });
     </script>
   </body>
