--- a/index.html
+++ b/index.html
@@ -3,66 +3,41 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>VR + Mobile Controls</title>
+    <title>Joystick A-Frame</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.9.0/nipplejs.min.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden; touch-action: none;">
-    <div id="joystick-left" style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
-    <div id="joystick-right" style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; display: none;"></div>
+    <!-- Joystick containers -->
+    <div id="joystick-left"
+         style="position: absolute; bottom: 40px; left: 40px; width: 120px; height: 120px; z-index: 10; pointer-events: auto;"></div>
 
-    <a-scene vr-mode-ui="enabled: true" renderer="antialias: true">
-      <!-- Rig -->
-      <a-entity id="cameraRig" position="0 1.6 0">
-        <a-camera id="playerCam" wasd-controls="enabled: false" look-controls="enabled: true"></a-camera>
+    <div id="joystick-right"
+         style="position: absolute; bottom: 40px; right: 40px; width: 120px; height: 120px; z-index: 10; pointer-events: auto;"></div>
 
-        <!-- Controladores de VR dentro do rig -->
-        <a-entity id="leftHand" hand-controls="hand: left" oculus-touch-controls="hand: left"></a-entity>
-        <a-entity id="rightHand" hand-controls="hand: right" oculus-touch-controls="hand: right"></a-entity>
+    <!-- A-Frame scene -->
+    <a-scene>
+      <a-entity id="cameraRig" position="0 1.6 0" rotation="0 0 0">
+        <a-camera wasd-controls-enabled="false" look-controls-enabled="false"></a-camera>
       </a-entity>
 
-      <!-- Cena -->
-      <a-box position="0 0.5 -3" color="tomato"></a-box>
+      <a-box position="0 0.5 -5" color="red"></a-box>
       <a-plane rotation="-90 0 0" width="30" height="30" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
 
+    <!-- Joystick logic -->
     <script>
       window.addEventListener('DOMContentLoaded', () => {
         const cameraRig = document.getElementById('cameraRig');
-        const joystickLeft = document.getElementById('joystick-left');
-        const joystickRight = document.getElementById('joystick-right');
-        const playerCam = document.getElementById('playerCam');
 
         let moveX = 0, moveY = 0, rotY = 0;
-        let isVR = false;
 
-        function isTouchDevice() {
-          return 'ontouchstart' in window || navigator.maxTouchPoints > 0;
-        }
-
-        function checkMode() {
-          isVR = AFRAME.scenes[0].is('vr-mode');
-          if (isVR) {
-            joystickLeft.style.display = 'none';
-            joystickRight.style.display = 'none';
-          } else if (isTouchDevice()) {
-            joystickLeft.style.display = 'block';
-            joystickRight.style.display = 'block';
-          } else {
-            joystickLeft.style.display = 'none';
-            joystickRight.style.display = 'none';
-          }
-        }
-
-        AFRAME.scenes[0].addEventListener('enter-vr', checkMode);
-        AFRAME.scenes[0].addEventListener('exit-vr', checkMode);
-
-        // Joystick Touchscreen (Mobile)
+        // Joystick esquerdo – movimento no plano
         nipplejs.create({
-          zone: joystickLeft,
+          zone: document.getElementById('joystick-left'),
           mode: 'static',
           position: { left: '50%', top: '50%' },
           color: 'blue'
@@ -76,60 +51,37 @@
           moveY = 0;
         });
 
+        // Joystick direito – rotação horizontal com eixo X
         nipplejs.create({
-          zone: joystickRight,
+          zone: document.getElementById('joystick-right'),
           mode: 'static',
           position: { left: '50%', top: '50%' },
           color: 'red'
         }).on('move', (evt, data) => {
-          rotY = data.vector.x * 5;
+          rotY = data.vector.x * 5; // controle lateral
         }).on('end', () => {
           rotY = 0;
         });
 
-        // Componente que move o player
-        AFRAME.registerComponent('movement-handler', {
-          init: function () {
-            const leftHand = document.getElementById('leftHand');
-            const rightHand = document.getElementById('rightHand');
-
-            // Thumbstick – Movimento
-            leftHand.addEventListener('thumbstickmoved', (evt) => {
-              moveX = evt.detail.x * 0.05;
-              moveY = -evt.detail.y * 0.05;
-            });
-            leftHand.addEventListener('thumbsticktouchend', () => {
-              moveX = 0;
-              moveY = 0;
-            });
-
-            // Thumbstick – Rotação
-            rightHand.addEventListener('thumbstickmoved', (evt) => {
-              rotY = evt.detail.x * 3;
-            });
-            rightHand.addEventListener('thumbsticktouchend', () => {
-              rotY = 0;
-            });
-          },
-
+        // Componente A-Frame que aplica os controles
+        AFRAME.registerComponent('dual-joystick', {
           tick: function () {
             const pos = cameraRig.getAttribute('position');
             const rot = cameraRig.getAttribute('rotation');
             const angleRad = THREE.MathUtils.degToRad(rot.y);
 
-            // Mover com base na direção da câmera
+            // Movimento baseado na rotação
             pos.x += Math.sin(angleRad) * moveY + Math.cos(angleRad) * moveX;
             pos.z += Math.cos(angleRad) * moveY - Math.sin(angleRad) * moveX;
             cameraRig.setAttribute('position', pos);
 
-            // Rotação
+            // Rotação horizontal (giro em Y)
             rot.y += rotY * 0.05;
             cameraRig.setAttribute('rotation', rot);
           }
         });
 
-        cameraRig.setAttribute('movement-handler', '');
-        checkMode();
+        cameraRig.setAttribute('dual-joystick', '');
       });
     </script>
   </body>
